made a show class to fix header not showing in ios phones

--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,9 @@ header {
 h1 {
 	color: #ffff;
 }
+.show {
+	z-index: 22;
+}
 
 .switch-btn {
 	position: absolute;
